ISPN-3226 Enable Error Prone